--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "react-hook-form": "^7.50.1",
     "recharts": "^2.15.1",
     "socket.io-client": "^4.8.1",
+    "styled-components": "^6.1.17",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4",
@@ -50,6 +51,7 @@
     "@types/node": "^20.17.28",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.5",
+    "@types/styled-components": "^5.1.34",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
