--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "security-check": "npm audit"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.0",
     "@radix-ui/react-checkbox": "^1.1.4",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
@@ -35,9 +38,11 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
+    "notistack": "^3.0.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "qrcode": "^1.5.4",
+    "react-router-dom": "^6.30.1",
     "socket.io": "^4.8.1",
     "speakeasy": "^2.0.0",
     "styled-components": "^6.1.17",
